--- a/pom.xml
+++ b/pom.xml
@@ -25,10 +25,21 @@
                     <target>14</target>
                 </configuration>
             </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <testFailureIgnore>true</testFailureIgnore>
+                </configuration>
+            </plugin>
+
         </plugins>
     </build>
 
     <dependencies>
+
+        <!--Input Utils is for simplifying user input-->
         <dependency>
             <groupId>edu.minneapolis</groupId>
             <artifactId>input-utils</artifactId>
@@ -39,8 +50,24 @@
         <dependency>
             <groupId>org.xerial</groupId>
             <artifactId>sqlite-jdbc</artifactId>
-            <version>3.39.3.0</version>
+            <version>LATEST</version>
         </dependency>
+
+        <!-- GSON, For converting JSON into Java objects -->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.9</version>
+        </dependency>
+
+        <!-- Unirest, For making API requests -->
+        <dependency>
+            <groupId>com.konghq</groupId>
+            <artifactId>unirest-java</artifactId>
+            <version>3.13.3</version>
+            <classifier>standalone</classifier>
+        </dependency>
+
     </dependencies>
 
 </project>
